arreglos segunda navbar

--- a/acerca.html
+++ b/acerca.html
@@ -13,13 +13,13 @@
         <nav class="navbar">
            <a href="index.html" class="navbar-logo">
                 <i class="fa-solid fa-laptop-code"></i>
-                <h2>Inge<span>Vision</span></h2>
+                <h2>Super<span>Vision</span></h2>
             </a>
             <div class="navbar-list">
-                <a class="navlist activo" href="index.html">inicio</a>
+                <a class="navlist activo" href="index.html">Inicio</a>
                 <a class="navlist" href="acerca.html">Acerca de Nosotros</a>
-                <a class="navlist" href="#articulos">articulos</a>
-                <a class="navlist" href="#contacto">contacto</a>
+                <a class="navlist" href="#articulos">Articulos</a>
+                <a class="navlist" href="#contacto">Contacto</a>
             </div>
             <button class="responsive"><i class="fa-solid fa-bars"></i></button>
             <button class="cerrar "><i class="fa-solid fa-xmark"></i></button>
