agragada pagina de contacto

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <a class="navlist activo" href="index.html">Inicio</a>
                 <a class="navlist" href="acerca.html">Acerca de Nosotros</a>
                 <a class="navlist" href="#articulos">Articulos</a>
-                <a class="navlist" href="#contacto">Contacto</a>
+                <a class="navlist" href="contacto.html">Contacto</a>
             </div>
             <button class="responsive"><i class="fa-solid fa-bars"></i></button>
             <button class="cerrar "><i class="fa-solid fa-xmark"></i></button>
